About page spacing issues

--- a/wp-content/themes/mct/styles/modules/_about-us__about-purple.scss
+++ b/wp-content/themes/mct/styles/modules/_about-us__about-purple.scss
@@ -27,10 +27,11 @@
 	@include breakpoint(800px){
 
 		.about-us__about-purple{
-			top: -120px;
+			margin-top:-90px;
 
 			.main-wrapper{
 				padding-bottom:0;
+				padding-top:0;
 			}
 		}
 	}
